kubeflow/pipelines/argo-deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: workflow-controller
spec:
  template:
    spec:
      containers:
        - name: workflow-controller
          image: gcr.io/ml-pipeline/workflow-controller:v3.4.17-license-compliance
          args:
            - --configmap
            - workflow-controller-configmap
            - --executor-image
            - gcr.io/ml-pipeline/argoexec:v3.4.17-license-compliance
          resources:
            requests:
              cpu: 100m
              memory: 500Mi
