kubeflow/pipelines/ml-pipeline-ui-patch-back.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ml-pipeline-ui
  namespace: kubeflow
spec:
  template:
    spec:
      containers:
      - name: ml-pipeline-ui
      volumeMounts:
        - name: config-volume-aws
          mountPath: /server/dist/minio-helper.js
          subPath: minio-helper.js
        - name: config-volume-aws
          mountPath: /server/dist/server.js
          subPath: server.js
        - name: config-volume-aws
          mountPath: /server/dist/configs.js
          subPath: configs.js
      volumes:
      - name: config-volume-aws
        configMap:
          name: ml-pipeline-ui-s3-configmap
