kubeflow/pipelines/ml-pipeline-ui-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ml-pipeline-ui
  namespace: kubeflow
spec:
  template:
    spec:
      containers:
      - name: ml-pipeline-ui
