kubeflow/pipelines/workflow-controller-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: workflow-controller
spec:
  template:
    spec:
      containers:
        - name: workflow-controller
          args:
            - --configmap
            - workflow-controller-configmap
            - --executor-image
            - gcr.io/ml-pipeline/argoexec:v3.3.8-license-compliance
