kubeflow/pipelines/minio-service-console.yaml
apiVersion: v1
kind: Service
metadata:
  name: minio-service-console
  namespace: kubeflow
spec:
  ports:
  - name: http-console
    port: 9001
    protocol: TCP
    targetPort: 9001
  selector:
    app: minio
