kubeflow/pipelines/dest.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: ml-pipeline-ui-artifact
  namespace: frederik-coquelet
spec:
  host: ml-pipeline-ui-artifact
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
