kubeflow/pipelines/test.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-minio
  namespace: kubeflow
spec:
  action: ALLOW
  rules:
    - {}
  selector:
    matchLabels:
      app: minio
